--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -26,10 +26,15 @@ spec:
           ports:
             - containerPort: 3000
           readinessProbe:
-            httpGet: { path: "/", port: 3000 }
+            httpGet:
+              path: /hello
+              port: 3000
             initialDelaySeconds: 5
             periodSeconds: 5
           livenessProbe:
-            httpGet: { path: "/", port: 3000 }
+            httpGet:
+              path: /hello
+              port: 3000
             initialDelaySeconds: 10
             periodSeconds: 10
+
